Fix UI: Flex on navbar collapses containers
Fixes #619

--- a/css/bookmarks.css
+++ b/css/bookmarks.css
@@ -1,5 +1,7 @@
 #app-navigation {
 	transform: translateX(0) !important;
+	display: block;
+	overflow-x: hidden;
 }
 
 #app-navigation > ul {
